Typecheck federation_client.py

--- a/mypy.ini
+++ b/mypy.ini
@@ -23,7 +23,6 @@ files =
 # https://docs.python.org/3/library/re.html#re.X
 exclude = (?x)
   ^(
-   |scripts-dev/federation_client.py
    |scripts-dev/release.py
 
    |synapse/storage/databases/__init__.py
@@ -314,6 +313,9 @@ ignore_missing_imports = True
 ignore_missing_imports = True
 
 [mypy-signedjson.*]
+ignore_missing_imports = True
+
+[mypy-srvlookup.*]
 ignore_missing_imports = True
 
 [mypy-treq.*]
