--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,7 +68,7 @@ combine_as_imports = true
 
 [tool.poetry]
 name = "matrix-synapse"
-version = "1.54.0rc1"
+version = "1.56.0"
 description = "Homeserver for the Matrix decentralised comms protocol"
 authors = ["Matrix.org Team and Contributors <packages@matrix.org>"]
 license = "Apache-2.0"
