--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,10 +20,10 @@ jobs:
       - run: scripts-dev/config-lint.sh
 
   lint:
-    # This does a vanilla `poetry install` - no extras. I'm slightly anxious
-    # that we might skip some typechecks on code that uses extras. However,
-    # I think the right way to fix this is to turn up mypy's strictness:
-    # disallow unknown imports and accept fewer uses of `Any`.
+    # Note: This action does a vanilla `poetry install`, without extras.
+    # We may skip some typechecks which would otherwise be available, but this
+    # is likely best addressed by increasing mypy's strictness. For example,
+    # forbidding unknown imports and restricting uses of the Any type.
     uses: "matrix-org/backend-meta/.github/workflows/python-poetry-ci.yml@v1"
 
   lint-crlf:
@@ -157,7 +157,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      # TODO: why is this list different from  above?
+      # Install libs necessary for PyPy to build binary wheels for dependencies
       - run: sudo apt-get -qq install xmlsec1 libxml2-dev libxslt-dev
       - uses: matrix-org/setup-python-poetry@v1
         with:
