Stop maintaining a list of lint targets
instead, configure the tools to find sensible targets.

Pulled out from #12337; part (but not all) of
e53e99edba7ccda8319ebd4fe832637cbe9261cc. Related: #12107.

--- a/tox.ini
+++ b/tox.ini
@@ -33,7 +33,7 @@ deps =
     pip>=10
 
 # directories/files we run the linters on.
-# if you update this list, make sure to do the same in scripts-dev/lint.sh
+# TODO: this is now out of date; we will remove as part of poetry migration.
 lint_targets =
     setup.py
     synapse
