Revert "Workaround poetry export bug with recent twisted"
This reverts commit 9007f357300f61c7c0c179a8e30b0bdd0cd8a3e9.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -119,7 +119,7 @@ idna = ">=2.5"
 service-identity = ">=18.1.0"
 # Twisted 18.9 introduces some logger improvements that the structured
 # logger utilises
-Twisted = {version = ">=18.9.0", extras = ["tls"]}
+Twisted = ">=18.9.0"
 treq = ">=15.1"
 # Twisted has required pyopenssl 16.0 since about Twisted 16.6.
 pyOpenSSL = ">=16.0.0"
