Restore calls to `poetry remove twisted`
Signed-off-by: Dan Callahan <danc@element.io>

--- a/.github/workflows/twisted_trunk.yml
+++ b/.github/workflows/twisted_trunk.yml
@@ -21,6 +21,7 @@ jobs:
           python-version: "3.x"
           extras: "all"
       - run: |
+          poetry remove twisted
           poetry add --extras tls git+https://github.com/twisted/twisted.git#trunk
           poetry install --no-interaction --extras "all test"
       - run: poetry run mypy
@@ -36,6 +37,7 @@ jobs:
           python-version: "3.x"
           extras: "all test"
       - run: |
+          poetry remove twisted
           poetry add --extras tls git+https://github.com/twisted/twisted.git#trunk
           poetry install --no-interaction --extras "all test"
       - run: poetry run trial --jobs 2 tests
@@ -69,6 +71,7 @@ jobs:
         #       ends up installing to `/venv`.
         run: |
           ln -s -T /venv /src/.venv
+          poetry remove twisted
           poetry add --extras tls git+https://github.com/twisted/twisted.git#trunk
           poetry install --no-interaction --extras "all test"
         working-directory: /src
