--- a/.github/workflows/latest_deps.yml
+++ b/.github/workflows/latest_deps.yml
@@ -17,8 +17,9 @@ on:
   schedule:
     - cron: 0 7 * * *
   pull_request:
-    branches:
-      - dmr/poetry-wheel-ci
+    branches: [dmr/poetry-wheel-ci]
+  push:
+    branches: [dmr/poetry-wheel-ci]
   workflow_dispatch:
 
 concurrency:
