Try to only update runtime packages, not dev deps

--- a/.github/workflows/latest_deps.yml
+++ b/.github/workflows/latest_deps.yml
@@ -37,13 +37,13 @@ jobs:
       - uses: matrix-org/setup-python-poetry@v1
         with:
           python-version: "3.x"
-      # Lacking a `pip install --upgrade-literally-everything` option, concoct our own.
-      # Ensure that we only invoke `pip install` once with at most 1000 package names
-      # by passing `-x -n 1000` to `xargs`. This ensures that pip resolves all
-      # dependencies together.
-      - run: "poetry run pip freeze | cut -d' ' -f 1 | xargs -x -n 1000 poetry run pip install --upgrade --upgrade-strategy eager"
-      # Dump installed versions for debugging
-      - run: poetry run pip freeze
+      # Dump installed versions for debugging.
+      - run: poetry run pip freeze > before.txt
+      # Upgrade all runtime dependencies only. This is intended to mimic a fresh
+      # `pip install matrix-synapse[all]` as closely as possible.
+      - run: poetry run pip install .[all] --upgrade --upgrade-strategy eager
+      - run: poetry run pip freeze | tee after.txt
+      - run: diff -u before.txt after.txt || true
       - run: poetry run mypy
   trial:
     runs-on: ubuntu-latest
