Set # syntax=docker/dockerfile:experimental
For buildkit in some environments.

Signed-off-by: Jason Robinson <jasonr@matrix.org>

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,3 +1,4 @@
+# syntax=docker/dockerfile:experimental
 # Dockerfile to build the matrixdotorg/synapse docker images.
 #
 # Note that it uses features which are only available in BuildKit - see
