Prefix log lines with program names

--- a/docker/complement/conf-workers/postgres.supervisord.conf
+++ b/docker/complement/conf-workers/postgres.supervisord.conf
@@ -1,5 +1,5 @@
 [program:postgres]
-command=/usr/bin/pg_ctlcluster 13 main start --foreground
+command=/usr/local/bin/prefix-log /usr/bin/pg_ctlcluster 13 main start --foreground
 
 # Lower priority number = starts first
 priority=100
