--- a/docker/complement/conf-workers/caddy.supervisord.conf
+++ b/docker/complement/conf-workers/caddy.supervisord.conf
@@ -1,5 +1,5 @@
 [program:caddy]
-command=/root/caddy run --config /root/caddy.json
+command=/usr/local/bin/prefix-log /root/caddy run --config /root/caddy.json
 autorestart=unexpected
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
